eclipse-workspace/Class1/src/objects/Executive_Review__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>TODAY() +8</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Executive Reviews</relationshipLabel>
        <relationshipName>Executive_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Executive Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Executive Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>